2008-03-10  Vincent Untz  <vuntz@gnome.org>

	* smoketesting/sample-tarball-stable.jhbuildrc:
	* smoketesting/tarball-conversion-stable.config: update for 2.22.0.
	Hopefully, it's right :-)
	* smoketesting/tarball-conversion.config: reorder stuff a bit

2008-02-28  Vincent Untz  <vuntz@gnome.org>

	* smoketesting/tarball-conversion.config: add limit for gucharmap,
	metacity and orca, revert the java-gnome change for now since we
	don't know if 4.0.x is stable
	* smoketesting/sample-tarball.jhbuildrc:
	* versions: 2.21.92 release

2008-02-25  Olav Vitters  <olav@bkor.dhs.org>

	* smoketesting/convert-to-tarballs.py: Limit GDM to 2.20. Use
	java-gnome for Java bindings (4.0 version).
	* smoketesting/tarball-conversion.config: Add option to set the config
	file. Limit tarballs to files with a valid name (not the 'rc1' stuff
	used in java-gnome).

2008-02-13  Frederic Crozat  <fcrozat@mandriva.com>

	* versions: Fix incorrect version for perl-Gnome2 module.

2008-02-13  Frederic Crozat  <fcrozat@mandriva.com>

	* smoketesting/tarball-conversion.config:
	Fix location for swfdec-gnome, version for gtkmm and add
	gnome-sharp-destop.

	* smoketesting/sample-tarball.jhbuildrc:
	* versions:
	GNOME 2.21.91 release

2008-02-13  Sven Herzberg  <sven@imendio.com>

	* prepare-ChangeLog.pl: included behdad's changes

2008-02-13  Sven Herzberg  <sven@imendio.com>

	* tools/prepare-ChangeLog.pl: re-merged the multiple-changelog support

2008-02-02  Sven Herzberg  <sven@imendio.com>

	* tools/prepare-ChangeLog.pl: recognize git repositories even inside
	subfolders

2008-02-02  Sven Herzberg  <sven@imendio.com>

	* tools/prepare-ChangeLog.pl: fix execution warnings

2008-02-02  Sven Herzberg  <herzi@gnome-de.org>

	* prepare-ChangeLog.pl: after chatting with rob we realized that we
	should not diff against the index. The solution right now is this:
	Diff the index against the last revision; if this doesn't reveal
	changes, diff the tree against the last revision. This way